# OCRticle

./: .gitignore  LICENSE  README.md  ocrticle.py  pyproject.toml  requirements.txt  requirements_win.txt
src/: article.py  geometry.py  gui.py  main.py  ocr.kv  ocrticle.kv  ocrticle.py
src/ocrticle/: .env.vault  __init__.py  article.py  geometry.py  gui.py  main.py  ocrticle.kv
